[package]
name = "pwvlt-cli"
version = "0.1.0"
authors = ["Robert Bartlensky <bartlensky.robert@gmail.com>", "Gabriela Moldovan <gabi_250@live.com>"]
edition = "2018"

[dependencies]
clap = "2.33.0"
clipboard = "0.5.0"
pwvlt = { path = "../pwvlt/" }
toml = "0.5.5"
home = "0.5.1"
derive-error = "0.0.4"
