[package]
name = "pwvlt-cli"
version = "0.1.0"
authors = ["Robert Bartlensky <bartlensky.robert@gmail.com>", "Gabriela Moldovan <gabi_250@live.com>"]
edition = "2018"

[dependencies]
clap = "2.33.0"
clipboard = "0.5.0"
pwvlt = { path = "../pwvlt/" }
toml = "0.5.5"
home = "0.5.1"
derive_more = "0.99.2"
log = "0.4.8"
simple_logger = "1.3.0"
prettytable-rs = "0.8.0"
rpassword = "4.0.4"