[package]
name = "pwvlt"
version = "0.1.0"
authors = ["Robert Bartlensky <bartlensky.robert@gmail.com>", "Gabriela Moldovan <gabi_250@live.com>"]
edition = "2018"

[dependencies]
nitrokey = "0.3.5"
passwords = "1.1.5"
serde = { version = "1.0.103", features = ["derive"] }
log = "0.4.8"
derive_more = "0.99.2"
secret-service = "1.0.0"
